# spacecrafts

./: Dockerfile  README.md  deployment.yaml  pyproject.toml
spacecrafts/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
spacecrafts/components/: __init__.py  apps.py  checks.py  models.py
spacecrafts/components/fixtures/: components.json
spacecrafts/components/migrations/: 0001_initial.py
