[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spacecrafts"
description = "Basic Hurricane-based Django App"
version = "0.1.0"
readme = "README.md"
authors = ["blueshoe.de"]

[tool.poetry.dependencies]
python = "^3.9"
django = "3.1.13"
django-hurricane = "0.9.1"
psycopg2-binary = "2.9.3"
graphene-django = "2.15.0"